--- a/build.xml
+++ b/build.xml
@@ -1,64 +1,96 @@
-<?xml version="1.0"?>
-<project name="SPVS" default="spvs" basedir="."> 
-	<presetdef name="javac">	 
-		<javac includeantruntime="false" />  
-</presetdef>	 
-	<!--
-	<junit printsummary="yes" haltonfailure="yes">
-	    <classpath>
-	        <path refid="model/Game.class" />
-	        <fileset dir="${junit.dir}">
-	            <include name="**/junit.jar" />
-	        </fileset>
-	    </classpath>
-	    ...
-	</junit> -->
-<!-- Sets variables which can later be used. -->	
-<!-- The value of a property is accessed via ${} -->	
-	<property name="src.dir" location="src" />	 
-	<property name="build.dir" location="bin" />	
-	<property name="dist.dir" location="dist" />  
-	<property name="docs.dir" location="docs" />
- 
-<!-- Deletes the existing build, docs and dist directory-->	
-	<target name="clean">	
-		<delete dir="${build.dir}" />		 
-		<delete dir="${docs.dir}" />		
-		<delete dir="${dist.dir}" />	
-	</target>
- 
-<!-- Creates the  build, docs and dist directory--> 
-	<target name="makedir">		 
-		<mkdir dir="${build.dir}" />	
-		<mkdir dir="${docs.dir}" />
-		<mkdir dir="${dist.dir}" /> 
-	</target> 
- 
-<!-- Compiles the java code (including the usage of library for JUnit -->  
-	<target name="compile" depends="clean, makedir">		 
-		<javac srcdir="${src.dir}" destdir="${build.dir}">	 
-		</javac>
-	</target>
- 
-<!-- Creates Javadoc -->
-	<target name="docs" depends="compile">
-		<javadoc packagenames="src" sourcepath="${src.dir}" destdir="${docs.dir}"> 
-		<!-- Define which files / directory should get included, we include all -->
-			<fileset dir="${src.dir}">
-				<include name="**" />
-			</fileset>
-		</javadoc>
-	</target> 
-<!--Creates the deployable jar file  --> 
-	<target name="jar" depends="compile">
-		<jar destfile="${dist.dir}\SPVS.jar" basedir="${build.dir}">
-			<manifest>
-				<!--<attribute name="Main-Class" value="com.example.java.ant.task.Main"/> -->
-				<attribute name="Main-Class" value="model.Game"/>
-			</manifest>
-		</jar>
-	</target> 
-	<target name="spvs" depends="compile, jar, docs">	 
-		<description>Main target</description>	
-	</target>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!-- WARNING: Eclipse auto-generated file.
+              Any modifications will be overwritten.
+              To include a user specific buildfile here, simply create one in the same
+              directory with the processing instruction <?eclipse.ant.import?>
+              as the first entry and export the buildfile again. --><project basedir="." default="build" name="SPVS">
+    <property environment="env"/>
+    <property name="junit.output.dir" value="junit"/>
+    <property name="debuglevel" value="source,lines,vars"/>
+    <property name="target" value="1.8"/>
+    <property name="source" value="1.8"/>
+    <path id="JUnit 5.libraryclasspath">
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.jupiter.api_5.1.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.jupiter.engine_5.1.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.jupiter.migrationsupport_5.1.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.jupiter.params_5.1.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.platform.commons_1.1.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.platform.engine_1.1.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.platform.launcher_1.1.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.platform.runner_1.1.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.platform.suite.api_1.1.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.vintage.engine_5.1.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.opentest4j_1.0.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.apiguardian_1.0.0.v20180327-1502.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
+        <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.hamcrest.core_1.3.0.v20180420-1519.jar"/>
+    </path>
+    <path id="SPVS.classpath">
+        <pathelement location="bin"/>
+        <path refid="JUnit 5.libraryclasspath"/>
+    </path>
+    <target name="init">
+        <mkdir dir="bin"/>
+        <copy includeemptydirs="false" todir="bin">
+            <fileset dir="src">
+                <exclude name="**/*.ucls"/>
+                <exclude name="**/*.useq"/>
+                <exclude name="**/*.java"/>
+            </fileset>
+        </copy>
+    </target>
+    <target name="clean">
+        <delete dir="bin"/>
+    </target>
+    <target depends="clean" name="cleanall"/>
+    <target depends="build-subprojects,build-project" name="build"/>
+    <target name="build-subprojects"/>
+    <target depends="init" name="build-project">
+        <echo message="${ant.project.name}: ${ant.file}"/>
+        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
+            <src path="src"/>
+            <classpath refid="SPVS.classpath"/>
+        </javac>
+    </target>
+    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
+    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
+        <copy todir="${ant.library.dir}">
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </copy>
+        <unzip dest="${ant.library.dir}">
+            <patternset includes="jdtCompilerAdapter.jar"/>
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </unzip>
+    </target>
+    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
+        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
+        <antcall target="build"/>
+    </target>
+    <target name="FullSysTest">
+        <mkdir dir="${junit.output.dir}"/>
+        <junit fork="yes" printsummary="withOutAndErr">
+            <formatter type="xml"/>
+            <test name="tests.FullSysTest" todir="${junit.output.dir}"/>
+            <jvmarg line="-ea"/>
+            <classpath refid="SPVS.classpath"/>
+        </junit>
+    </target>
+    <target name="Game (1)">
+        <java classname="model.Game" failonerror="true" fork="yes">
+            <classpath refid="SPVS.classpath"/>
+        </java>
+    </target>
+    <target name="Main (16)">
+        <java classname="Main" failonerror="true" fork="yes">
+            <classpath refid="SPVS.classpath"/>
+        </java>
+    </target>
+    <target name="junitreport">
+        <junitreport todir="${junit.output.dir}">
+            <fileset dir="${junit.output.dir}">
+                <include name="TEST-*.xml"/>
+            </fileset>
+            <report format="frames" todir="${junit.output.dir}"/>
+        </junitreport>
+    </target>
 </project>
