--- a/build.xml
+++ b/build.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!-- WARNING: Eclipse auto-generated file.
-              Any modifications will be overwritten.
-              To include a user specific buildfile here, simply create one in the same
-              directory with the processing instruction <?eclipse.ant.import?>
-              as the first entry and export the buildfile again. --><project basedir="." default="build" name="SPVS">
+<project basedir="." default="build" name="SPVS">
     <property environment="env"/>
     <property name="junit.output.dir" value="junit"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
-    <path id="JUnit 5.libraryclasspath">
+	<!--
+    <path id="JUnit 5.libraryclasspath">		
         <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.jupiter.api_5.1.0.v20180327-1502.jar"/>
         <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.jupiter.engine_5.1.0.v20180327-1502.jar"/>
         <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit.jupiter.migrationsupport_5.1.0.v20180327-1502.jar"/>
@@ -25,7 +22,9 @@
         <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
         <pathelement location="../../../../../../home/seba/.p2/pool/plugins/org.hamcrest.core_1.3.0.v20180420-1519.jar"/>
     </path>
+    -->
     <path id="SPVS.classpath">
+		<pathelement location="lib/junit-4.12.jar" />
         <pathelement location="bin"/>
         <path refid="JUnit 5.libraryclasspath"/>
     </path>
@@ -75,13 +74,8 @@
             <classpath refid="SPVS.classpath"/>
         </junit>
     </target>
-    <target name="Game (1)">
+    <target name="run">
         <java classname="model.Game" failonerror="true" fork="yes">
-            <classpath refid="SPVS.classpath"/>
-        </java>
-    </target>
-    <target name="Main (16)">
-        <java classname="Main" failonerror="true" fork="yes">
             <classpath refid="SPVS.classpath"/>
         </java>
     </target>
