--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,9 +11,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
@@ -23,5 +21,19 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+  checkStyle:
+    needs: build
+    #runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
     - name: CheckStyle
       run: mvn checkstyle:checkstyle
+
+
+
+  #PMD:
+  #  need: [build,checkStyle]
