--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,6 +37,11 @@ jobs:
       run: |
         errors=$(cat target/checkstyle-result.xml | grep error | wc -l)
         echo Numbers of error = $errors
+    - run: mkdir staging && cp target/checkstyle-result.xml staging
+    - uses: actions/upload-artifact@v2
+      with:
+        name: Package
+        path: staging
 
 
 
