--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,10 +56,10 @@ jobs:
     #    path: '**/checkstyle-result.xml'
 
     #Step de subida de nuevo reporte
-    - run: mkdir staging && cp target/checkstyle-result.xml staging
+    - run: mkdir staging && cp target/site staging
     - uses: actions/upload-artifact@v2
       with:
-        name: checkstyle-result.xml
+        name: checkstyle-result
         path: staging
 
 #    - name: Get cantidad de errores value
