agergando actions to github

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,7 +56,7 @@ jobs:
     #    path: '**/checkstyle-result.xml'
 
     #Step de subida de nuevo reporte
-    - run: mkdir staging && cp target/site staging
+    - run: mkdir staging && cp -r target/site staging
     - uses: actions/upload-artifact@v2
       with:
         name: checkstyle-result
