--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.6-SNAPSHOT</version>
             </plugin>
+            <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>FindBugs-maven-plugin</artifactId>
+            <version>2.3.3</version>
+            </plugin>
         </plugins>
     </build>
 
