--- a/pom.xml
+++ b/pom.xml
@@ -69,5 +69,11 @@
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.7.7.201606060606</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-swing-junit</artifactId>
+            <version>3.9.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
