--- a/JenkinsFile
+++ b/JenkinsFile
@@ -69,12 +69,12 @@ pipeline {
         always {
             //junit testResults: '**/target/surefire-reports/TEST-*.xml'
             //junit testResults: '**/target/TEST-*.xml'
-            recordIssues enabledForFailure: true, tools: [mavenConsole(), java(), javaDoc()]
-            recordIssues enabledForFailure: true, tool: checkStyle()
+            //recordIssues enabledForFailure: true, tools: [mavenConsole(), java(), javaDoc()]
+            //recordIssues enabledForFailure: true, tool: checkStyle()
             //recordIssues(tools: [checkStyle(reportEncoding: 'UTF-8', maxAllowedViolations: 1000)])
-            recordIssues enabledForFailure: true, tool: spotBugs()
-            recordIssues enabledForFailure: true, tool: cpd(pattern: '**/target/cpd.xml')
-            recordIssues enabledForFailure: true, tool: pmdParser(pattern: '**/target/pmd.xml')
+            //recordIssues enabledForFailure: true, tool: spotBugs()
+            //recordIssues enabledForFailure: true, tool: cpd(pattern: '**/target/cpd.xml')
+            //recordIssues enabledForFailure: true, tool: pmdParser(pattern: '**/target/pmd.xml')
             //recordIssues enabledForFailure: true, tools: findbugs(pattern: '**/findbugs*.xml', useRankAsPriority: true)
 
         }
