--- a/JenkinsFile
+++ b/JenkinsFile
@@ -54,6 +54,7 @@ pipeline {
         stage('Unit Test') {
             steps {
                 echo 'Unit Test Stage'
+                sh 'mvn test'
             }
         }
 
